--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
   },
   "dependencies": {
     "commander": "^4.1.1",
-    "puppeteer-lottie": "github:adpipe/puppeteer-lottie#test-bump-lottie-web"
+    "puppeteer-lottie": "github:adpipe/puppeteer-lottie#test-bump-lottie-web-dan"
   }
 }
